--- a/DESO/Main.resx
+++ b/DESO/Main.resx
@@ -121,6 +121,92 @@
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="AldermiIcon.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAC0AAAAtCAYAAAA6GuKaAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAABl0RVh0U29mdHdhcmUAcGFpbnQubmV0IDQuMC4yMfEgaZUAABJ+SURBVGhDtVkJ
+        cFvXdRVtWRtFcd83kARJEASxfAAkuIGLQBIEdwokSJAgNu4iAIKbZEkUJZmi9t2SvMRWbceyrdiK26Sd
+        uE7SZpom6bht0k46mWnHnTh1m3TGM22ayK5Hy+25j6TteElcL2+GwwX8751377nnnvf+hs8yeno23D86
+        qt+222WMn/EYMsN+nTzkMxSK726NjP8WdOmzZodLc4IebT5/8d+DflVyYKB0B559gGhDxNp0X/qIWFqq
+        2Tg5qdweGC7NmPEZdCGP1BTyGBwzI+W+sF9yTnv19pBP3xn2Sl0hj84xO2JyT/uMA9hU+8yIoYI3wJsN
+        BOSbl5Y23Lc275czeIGlHuUmRCxm2mvIDfn1tSGfNALQJ75ycebl7736ws/x89fw9UzQKz0R9OqvTfuk
+        68cX+/7ixesXfjw/VnkFG1oI+Q3dvNnpESl1dlAdyUHA9F941CNu9PQIOoyPq5Omh43F035dW8ir3z87
+        Wv7yd1+5/ssbzz5OR/aN3hvoUL/r7DL8tr/L+Osuq/o3dlvJO6GRlttXzy/R3/3Nq++cX/G+FvJKV6e9
+        0uisz2gOjEh5Yb8pbslds+WLjHoE8495GBzVZ2HBsrDXMIhong15dT+8eHLm7QunFgF4nL567RJVmSQq
+        KsihEmU+KfKzSadWkMPeQc9eO4uv83T8cODu+ID0JjLx9WmfYR/TKOQ2akXUZ9+L+ucaEet04AKb8el2
+        AnSQ0+93SK8fOTB1x2apII7iuWML9PiVU1RZqiGpWE6qAhnpSwqpRJFLg84euvHsFXrq8ZM0PdFPkyOD
+        +G5/e6RP87eY7xK47pv26ysnfbpsDs7nAS4iPDFREjszbCwAN1sQlQNTQ7pv+Z07/ysw6afnnnmMJoYH
+        6JknTtP54wt09cJRairXkKW0mMz6IjIU55FOIaPAhI9uvvA4feXyMo24OujA3gB98+Xnqa5Kf691Z8F/
+        BD26F0Jew3TYJ9VNDatzPjNwfgigo7nSVwFLR8YHdH/d3Vr1v6WSmk4fX6LTy7P02JXz9AgifenUg3Tu
+        +IPkHdxFZToFtdvqqL7aSEadkvbOB+m5py/TlbOLNNRjpUcuHacj+6dofiZIebIMarFofjPp0v0ZF+n0
+        sFTP0sjqxLK6BucPDy4IfogfBuBGFNyhMaf2h23Witsmo4Y626x09tgegJ6hP3nxKVqc9dHJIyE6/OAE
+        Hdw3SxV6JTXvLCdbQxXpNUV05OACLR/YLbIxM+mhk8sLtB/PHD4wS7mydMrPy6adlUXvTLq0r4DrsyGf
+        zhwe06SHw6atn7Y4I1g/uTAgWVXTHmluckj3HZul7F0tOHrm5DJZasvpzMq8iO6L1x+joL+HDgDEfMBF
+        Rw/vJ7ksjTTKPGqqN6EYZXTy6D5aWdwtMnPx9DKdP7FHFG5vi5nmpyeo0VJLmenJVF0mvxUY0qFA9ePT
+        Pp0h4NUmck0xplVonzA4JVx4Qb9ODZXwIso3OqyG3xp0xdRnb6fnn76C9J6ifWEfXT6zX6T83LFFWloY
+        obmpQTq+vEhZ6UmUnZFCKkUOybLSaOXwAh2Y89OEp4uefuIiXcRml/aMktNWRccPheiVP71JOfg/poql
+        Kvct1viwz9A349YrAoHSHX+IJhGslyxtYY/eBi09M7RLeqPcqKaaSiM9fvUcLSNiTz9xgeYmXQB9gJ68
+        ukLXn7yEAmunwEgP+Bug5MQ4ys1Op0J5NpUaNLQnPEpdNjMN9jTT6aPzNDvlouH+Vrp88gBN+HbRuRMH
+        qaW5gWJ2bKeM1ARytCl+BuAPBaFW4SFNOmeesa1C/NDgHbFagBJS2K+f2u3SfrfcUHSnHDLGaT67skAn
+        DocoNNZHL12/RlPDPXTqoWmox3nqtFbR/rlR+vYr3wDoWEpPTaT8nExyDfTRM08+jGIrp8lhJ7kdzdTX
+        1UDOjgZk7TLNIzseZxuNevtpx/ZIio2JIoU8+faUW/cN4BjmjLMgfCK3l5aUmxbgJzjK0M+L1pr8X62n
+        LQfpZpBnV+YEdx99+AQFRwdFdA/vm6TDi/O0G9y+cOog6JFM+bmZlJ2ZKor22NI0Le4JUnDCI8BXolAf
+        e/g0HdoXoEP7w2Rvt5DDWklxMTsoKT6a4uOiqbU+799QUydhFyy7fbq0NW5/ZESwYqy2aGkYO/1WTlbS
+        nfTUJCrMyYAqhKmx1kQrBwPgYRAq4KSXnn+SXL1WpN1KN2/8EZqGk04d3UspSXECdEZaEnW1W2nS241i
+        3E8zU17IYRG5nd308JmDtBAcInefjZrMenpwyk32LhuAR1FifAyKOeEOMLyMaLtnRvUK9iiMcRXq2uDw
+        48MEoRg+aanHpvjnBOw4LSWRGsxliGof+Vx2srfUkn+wjSbBxb0zo/TsU49QYMwFmszQ/oUA+DtCqcnx
+        JAc1MtOSydpQQ47OnaDOOLUiyg8tztGRxTBNYCPOXY1kLlPTtL+XhvraaHHvblBkmwDNaztaFD9bbfW6
+        cuFPPkwR4S9ADbaP6HyPVhlkv+YHOWoNZgOi2YRFGsjd3wlNlcjRUS/APHrpGDh9kYYH27FoEBsYBD1S
+        hBqwgljqKmmo10ajHjs11ZTSyqEZ8g50krW+jOowz5S/H4BbxXwzUx4UYyQlJ8SKoizXpf831OtyEHSd
+        B0UY4xrc1eF2Z28RRt2rHwp6pD/OzUq8wyrAXC6BdO2slmjM3UkdKDjfYDftaq1Hmjup21ZDp5bnabC3
+        lcb9feS020SEc6AeQsLqKig45sTzetrV3kBD9kb87iJLjREb7cZcmKOlhhrwe7lUJMDGx+6g2Ogoys2M
+        uwMVeQmZH5iDG1xTkfcHc4YrFbuaGh1Qf58jzKDlmcmQrzTRmu1tddTSUCG+B8bd1AkZWzk0R/1dFhTn
+        ENUicnp1IbITL5oFK4iyMBfdsYKqynTU2lBJvW0WbKyZLGYjWr6dKo0qfKamUq2C6ktVlII1d0RtWwUf
+        E0kjTs1fQRQmZn0G1Rqv3x/CenoMRlBjj7Nd+dNkLMygs1ISqL25FlEcoEYsZNQUUk2FDpEyIL066kKU
+        hj0OsoGvDXVVJOnUiHKGaM1ZyFIiUs0FWQzwFaVqPFdGNQCnLsoRRWnAfMUF2dTT3kQ9nVYR4chtWwS3
+        owG+v13xU/ieedEhgRFQ3yvGCO6CAY+hgouws6nwdeYjL5acEENNdaUClKuvnTpadpKtsYaU8izxe12V
+        QURKCSu6byFE1564Sgf3huCtH6Hqcj0lATQrAoNRK+XCtjbUlpEEn60G7ayWajGfXl2Az/MoMTaKtgM0
+        1xOD7myU/ysifZCLkTEy1lXI+CHsV8bNQDm4E7XV578RHxstqjgeC5YUcYpNVF8liS9dST7SqyedKl/Q
+        pbpcR3HgIXfAeijNuK+PJkbgQ6DBhXIZAG8XQFgGGxkwni/OzyJJJcf3bGw4mwrzMqlcU0CxKMStWzbR
+        tq2bKSpyK9lqc/nA8BCkr5oV5IOH4d8B3VyT9wanZz1FFeCjvdWCoqujNjg3S40JhWOi3WguA71tMP4l
+        ogtuvP8+sRC3/DEfVMHRRgP2VtoGEAyGI1lTIdFgXxfZO5rEgUGlyCOjpELGjNSIos1DT2DQvMlIALea
+        GbR+RTi/D4NepYdW0KOjQf56AiLHxcDADVolVRiKhQJYYTnZM9dXGwRYd28ztTZWkgmVzwV4X0QEyWCY
+        6o3FANeJjJTSlk0PQFGS4OI0oih7m6vIpAWX5ZnUXGcSfGfwirwsyk5LBFgAFrzeis4o/4XwIQjo3omq
+        2N8B/cFCZPIzNbgQecdJ4DU7NgN4xyktQkq5eIzc3aCxLgBvA3BWAnlulihYk6SkWkS1vblO8N2gUZDZ
+        pKE2qxkFrCdVoYzKSuT30lHoMrR7GWqoEJY2OioSa24VlGLN7rYW/AsfoMNuyfRhTgvJC49IJSx5Y071
+        D5gWMXhwByZRFxeQb6gHDaKHhod2UW9nE9yZg7qh1fVQEh+6WW9HI5XDUzDAdmstjXntIpptkLk0AOON
+        snKUS8WkU+Yi6mpkzkDVFVAhs4maG+vIgTbOazKfOVhx+HmoW/VjPorxlcO8rzAKUN8Hvd5c0DZdATSX
+        jJTou1zxbGI47RwlE0AZoadSSQF+VlENzoNcpPVVeoDXCuNfkJtB/Z2NtNtnp534u91Wi84IA5WTTmZQ
+        pgndlbPGRWzGfHJwmLsnW9kq9AIOEgOOitxGWWlx98YHta/wwZf9B59k1uCujvU2Pu03tIE/j0mq1P/h
+        zrTOa3ZuClS4uigPZiYdEyaA5yVkA8dN+mI0mlpwU0a93S0oNj3tm5ugVkjlTlBErYRagE4SDrpF4HFj
+        XTnmykAjgYVFFlh1FABfkJVC21HITBEu6Apt9i0ceq+FPLpuPqmzC12DuzrWDRMrCJ8Ju5oKXmfQrJc8
+        Ed9luPs7IFloMIi2qjCHKnA4aESTMZvUlAxLmY9FjShaLr5+eGauATMaithkShzl4XPeGFOotlwLw5+I
+        zzLIhM3b0SnZSzNgDlQS1u1tVv6cixAnqBo+en3cCUZY0yDaJV91jQ9oXk1NjLrL6Vr3A5xSHQqRo5SR
+        Gk8ZiFIqolWMDWgRxbzsVKHTJYhqYGyINAVZUBk9pSZEIzOJ0PcCgNlBKjyfiWe58XAGmRrlmJfXiUJW
+        WeoUOSl3J1zab4f8+jGutXlfRdTHXliyIeHbTsge33E8bC7NekukChOxkrDlrDCoRMFxB+MDbHzMdihE
+        jWjLsowkbA4nj9x0qEkVgMGiZiRSFDiaiaiyhylFIfIzqagTPomXQqM5O5xRViyWujjUks2c/xZjYCx8
+        /PuIWVofHH5uMrPDkj7slYLDfTBOiTvuMqfXJy1CJ1Oj+JTgZnZ6oog0Ry81MYbSEFFu+3z0KoPkKXPS
+        yKJX0ANoOvw/OagD3ghnjediQ8Vyx5aADRaDZS7rCjPujg1ovodTeUBgAabfd7iN4AqFHsrApVZw+3yT
+        OfffWS+j8cVehH2EFqD5FMNqwqrA3Y4rfsumjSK1wVEH+K4iqTCbNHnptPmB+1c/Q6dLBHiWQLa7LKUc
+        jJysVLEJniMHgXC2qt4E4HMc5VkU4JpqfJQa64NvlvhwG/ZqNWGv3j/p0t1UK5Lf5giw4PMiGlWBaCQc
+        dVlmClKfIPjNgLmTmk1a4UmMRTKKj44UHZE9TBroxTzO5isGRJbv+YpwYGY7yvOnAHhHXdHbqKeXoWB+
+        xsBY+MZ2Dd4njgjWbD5Mcr/nqyqfo+T72Wkxt1f1k8FHibsNJRpGbaVB0IXlKw5c3fzARqEuu4cdpJZn
+        UCpUhXnK/iMLmcoDryWNUmxUybIHbnOmElALDov2tteu/gF3ZV6bMTAWxrQK7fcM5o845HoNuWG/0cr3
+        eENdxa/J0mNuiwoHcKZMe3O9MP1sY3MQcd4Upz+R5QoNJgWAuasxzzfeFyGoJUOjYVvKXpsLfDNoE4vu
+        29cg3XV3lfwDKLHMxyte+zPc59Vs5F7P71H4Ap31Ei31R4q8xHcjt21eXQyAmI+sChwxvo9mY8QbyoEm
+        xwAM04ElkbMQDQPE1FCgDngznIFkbNLZJN127yr5CTrxCX7lwd2P1/7ImfBTDHE3zZXLwPkuJOiT9k26
+        tN9srJb9Z/T2LfdYDoXBQeTzYZT4slELLWftZXnkCLMGy7AxvgcUeo9o83e2nypIo6NRfYspgXPpMmjR
+        OestVYqT96e5w/u4wWLODwvbygdLn1TH5zW01Uc9Paq/L85PuLUdUWd/wm8AKsu0wouwFrO/YBljb8Hn
+        RKaQAr6EKcS0qVDLbvfZlL8Yd2pvom72whQ1C38BwKzJH9tI/h9DXK6zw2JvwrqJrrmLo47oXO9rU/yT
+        pij5liwz8V5LU60Ar4O61MEsseeQEH1u1ewGczMS7lVLsnftTUVv+h2a7wTc0lm+5ORTiXjxhOCwv/i8
+        gNdHhGg80EtsIIFfZawefyRnyKM/gA08NdKv+VG7peBXbY1lt8uk/Ht8WKivUt9rtxjvtNUV3bI3K36J
+        mvjJmFP7dZigk3ydy9HlGwBWCR+CssbhLwTwe4MjwBMLj+JXJa8Wqb6S3xtCV8N8y4qCfX5qSP+X3i7p
+        H0cc0msTLt2fw0M8FxiSLoibflhfvp9jDWbLwNF1u2u2rKnEFwv4g4MdIYPnt1Hsvji1QdAGctXI98r4
+        fRTcD3Ib5ptPbKY35JGawn59KW9U9ACmgngN9+W8Q/zEIQoVi4btovXH8NsDLli+xORIziH1Ib+uiF81
+        z00aU7i7rb7sVG760iP7KQbAr0afOxgDYwrxF/62jf/GnzHQtSL7nGA3bPg/iEFs8kMxEJoAAAAASUVO
+        RK5CYII=
+</value>
+  </data>
   <data name="EbonIcon.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAC0AAAAtCAYAAAA6GuKaAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
