Added DungeonForm functunallity and further UI improvements

--- a/DESO/Main.resx
+++ b/DESO/Main.resx
@@ -121,6 +121,163 @@
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="OtherIcon.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAC0AAAAtCAYAAAA6GuKaAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAABl0RVh0U29mdHdhcmUAcGFpbnQubmV0IDQuMC4yMfEgaZUAAA0uSURBVGhD5Zl5
+        UNtHlsdtJ44BA+IUEkIHOtCBJBC6QUicQgKJGwkQMoeROMxhwGDwATEGDL7PHD7iGDtr7I2vbK5yJuNM
+        Lmd3dpOdmpqqncnau1NJdrPZ2h2Pk/V4fH23pfxSHk8ymTixmT/mU0XVT79+3b/X3a/f0Sz4q6bbY4tU
+        q9WLA89HD263Tk72JFgNhphjh6Z7+vqqQw/sm3GPjfnD9u9dl+r3+4NyfzG62up0s09PZzZ7y4f3bFv7
+        26d2Dv9Ls7fsyrlTB29tn+z/sLNt2e23Lpz57WB/+39cfPvFj448s/fC+ReePjY2VvPY3u0jLmqYhVun
+        +lOo54fD2NjYoh+9Opf7/sWXBjaO9l5aN9yFMyeewMRYL/p7W7Fr2xhG1/ZhauMaTI4Poa+3HXPHnkRv
+        tw8X3zyHUycP463zz7y/Y2bo8v7da5fz+UzO/u0DT1HDPxgCSh7aN2KRSvmiLWPt9Ce3DXR2t9dd2zi2
+        EkcO7cSeXdPIzzFAJOAiXSlFZMRSxMZEIYb8RYSHorhAh2yjEt1ttejubMbgyma8dnoLJkc7cPZvpm8M
+        dtcefPn0vhtrVnnLAt9bN9QW2IFHAs/fC0+FWdvfXvbK3x2fwrtvv3R52/Tq67XlFiz3OjG8agXE4hSi
+        XDTo8bHIMmpR73bCVWX/os237FKHv+ETU2bGb8xZqpsFOVrkmNTgJMbCbJCiKCeNTMKFl5/fia7mIuza
+        Mox929eUbJvoY7194fRpv7+G5qrI12aKxRGUKt+OTaeLHBio5+7b3DG7dWoVZg+MYm52K9JkPDjtFpSX
+        l6Ks1AFaZCTYrATkmdVXB7q9J5u85S06XUpyTc09q7RIzGYnCjjxXbyk2Lc9Ljsa3CUQcOJQaFYiS81H
+        RVE6NGl8rFjuvLZjouPKc4fGL585sdu9bdPQpl3b1lsGuhqSqbG+mcAJf++t0+9MjDR+/uyelagsMaK+
+        uhD55nTwk3nEFLZCoZCDQY9FeUnuVYsxbR2DER5Pdf9WZElJMUIew1Jmz/zVxtEVgckiPnopOlurcOTg
+        FvS2VcKkl8Kem4b1/TU/O7p/w+y2iZ73jz699lVqiG+m2Z29++SR8eD2nTs+g43rOpGhFJBtjUFtZQGx
+        11Bo1XKMjvjP0Wg0HtXtO2PSy5VMOq01OjLkYjRtKSLDQyDiJcBdbkZLUy3aW4jiOikEvET4vMWYPTiN
+        d3/y/E8PHNiZMDzcEU0NcxeLhRtSaVP9z56ZFTCokjF3cB3Ov/AEsnUpEHDp4HMS4KnOxXB/83NEfOGX
+        ve4ftVrGcVoNs6u6G37d391wJ98kDyra2uRG4zIPksl3vLUlSJXw0L7chXd/fOzNk0c3n7LZdJHUEHdJ
+        TIwVk625lsxhoLJYh1NH1qPX50CFwwKHVY/aCgv2bF6J5Q22N6ku35evJrwoVZy0Licr7XcsRjSkIhay
+        9Ar4G53BlVfIklGYo8GFVw+8uaav7jWqz73weAxumox7Iyp8CXpa8nFmdhTeyszPFRIWEuk0qJV8YuNZ
+        /8dmxwuoLj8Yt9smqHTk/FydLsWRA5vQ0+rAzLp6VDsMaK6zorRQhb1bV2HHZNeviPjd3R3qa1IM9bhq
+        Nemi12VktgVZElTaMrBpxH3HWZgxpxAnYvuGJrzxyn6cmdt+R6sSa6iuD4JFcklyYaZW+WJhjvq1gClO
+        DLnAZsZASzzKUFcVjNpUFOelX7on/NfU1DzS0Vwy295ov7F2wIvBjlJkaYQfj67ykAnIdlXaM+5o05KJ
+        F8l7NSoqfK1YyKiiuj4ogi5SJpM9Zs2W/abIokC6jIvAApYW6dFSlw+zTnRzbKRHHpQO4PN5mI6CLE62
+        lv+xp8IYOLUvuMstjl6f85Ph7qrzuyZ9p4d6aoktF7/cXGczkS6Lvuz5YAko7XKYOpvqbDcLLemwkGCU
+        LheQVY+GLo2Dusr8u4t15MC4dKSn/J/6Wq3EppyXiq0GW2625mqmVjzV6in8rMCkONLV3rDh7IkdpUT8
+        oSj8FUajWtLbWX8tUy0kHiWVBDQOhDwm3KWZJAAJmwOJVlBQymeJstS8H1XZdRtTuEyJ06r7ZWVFGRES
+        XHQUGvrsufL3HHnpdiL6vd3c/ZBvUk4rJUngsuLQ2VKO0JDHEPAuLbWWj7v87sqgEJsRvUcikcRKhDxL
+        qc1wttqZeTNNLiLmYD+0vN46IE9hNZQWpp8iog91lb9CmsLJ91TnQyrm4fGRduK3mcGDyWdHXxAKhUuC
+        Qkx6rCeQwFsyUz+d2dCBKhK6V3XXX7PmqrpLbcZqi8XyqEkn2UpEH/pKD/W6pWSHV/iXFZPcJgIdy6tI
+        fMgltp18x6yXriV6hlGiCxa01ueXWS1p1/NM5AAY5ahyZP8+Q55cok0TrtYphEni75pt/UB8LrNWq+DM
+        +RqKLmXp5WiuL0auURqIjj9Vp6TEUWJfkpenT9CmCf6VmxgNcTId4yO+Fxs9JRtTePGTRpWUS4nNG+yE
+        aBeDHo2BjgqI+QlQp4m+iI+PD6eav4TkyHX2nPQX0qSsOzUO3WubJwZOKmSC/xLx4pdl6yRWSmzeEHIT
+        VenkXFUXayBKZiA8bMnPqKa7KBSKaJ+36PFqp+l3xQWasYnHByHiJ0KXIZ77qmCdT1isOBEtIvSOiBcX
+        zDA9LutnNpPp3hTY4XCElRRozudmKgb1quT320iKWF9jg1LKe6am2MKgxOYNsYCVGx8bCT6Xia42N8SC
+        pA/I63sdQSCUN7qtG5UyXncaiULjo30kyTejpEDfS4nMKxajoiY0JAQmYwZystJRYNE9H9CRar6HRXmm
+        tH/PUIqgSRejttoGhZgzTd7PS1D5Q7L10iPyVClseTrMTAzAU1t5jLz+uh5Wq4YtFbL+0WLKwOpV7Shz
+        5KPcbjhOmuZV6UBcUEj5H+r1Wqzw1YDDol9nMpkcqvnrJBJXI+Cx4LCZsH5NLwTJSZf/qFB96HirLBo+
+        l3G7xJaDvGw1WcCuq7XVRSVU89eRidiNXBb9k6pyG3ZuHQU7iXnHoJEWUM3zAjlLB3RaDcbX98G/vJ7U
+        kaGHqaZvJpAe0uNo/RqVLODQEbLkMVSW5l8kTfNiIstqbcq42Kib7b4G4ubscBabb/V3N2VSzX8ahYTj
+        T4ijfVLvckCrSkFqqoy4HU8d1fzQILYcYlCJLtrtRRjoqseqlT5km/Q/5vOjaZTIn0bGZ3KWLg1pMGgV
+        aPY4kZQYj8Jc3dWzJ56UUSIPnOpqQ6hWJTqYKuHD11hGEiQRoiPDP0hISFhKifx5pFIeN4kRe6uqNC94
+        BSZOEaLUUfjL3VvWfvttz33i96sXV5QY5eU2Y0u2XoaGKjNaGkqxoq0BzcsqL/uaqhWU6HdiISM2slMq
+        SrquVUnQ1lKDiPBw+JoqP5qaGhYGBCYmVjKbvJXuwDVa4Pd9hPuFK1f6mH6/I8xdbva3Lit5o7fddWvq
+        8W6s7l8ejIIxURFzxM3dTUPvB3ps5OFERgwGe7xobaqG0WiATi274iozd370b+9d+e9PL+Hv3zj64fjq
+        +mdW97j/c11/wwdeV/45r9cR9KvHDm7hslh0ZUVFUQappsP+9vju7Mn1HZan9k69OLOh68LKDve1qbEu
+        rOlvhL/FDU9dReCm6fpQX9vuwG1tUIn7hREXZU7mMvoCUXJksB2KVDE0ahWMBjUqio3obK3E5vE2Us/J
+        YC8woJNs609e2X/zn//h7LMvnZg5PNK/7PMNY4O3nn5iy2dnn5sZPD67939PPTfza6NOgZxMJalJS1Bq
+        1cJba0dRgQlGvep2Cp8dKJ5/MAvj46JfFwuTbjWRg1mYa0SFMxdGnRJRUTQ01hai2mlGXbUV3joHuttq
+        sGVyAM/un8S545swPNCCvrZSHNo7grFBD0nCuFDJk0m/IlQ4zNAR82MmxN3msRPeydTKu5vqSkTUd38Y
+        gdt6Jj2mgtRqN4g7DN63ySU86DUKxMbQEBcTSU69gyjoC9rlxvXdGB1qhtmQigZXIXo7XCi1m0geMYzJ
+        8WEycT3J3FjQq1PJ+yy4Kgq+yFDy86jPPVgSE2gtEWFLzoaGLEZCfDRkKVw4irIQEx2JRx99BDum+2DJ
+        UgWvtLw1ecSEMuEkymakp8JZYiXmJQqWc4n0yGC1HREe+iEjPqqTw4kj5/jh5u2LwsJCxhQy3lEBl3kl
+        hrYUEUtDICfb7qrIR1tTGUklNQjUeEoZHySZh0aVSooKNrF9Camso0CPXUqi7eJPaeEhFxPjaCpq3PnB
+        U5VtrXHorxdky1GSJ0eOXgh7jgJKCQthSxYTEyDVD4mqNoscjVWZpP6Mh5Ab93t6bMQvJKKkJ+a9KkpK
+        ioyptqd96iyQz5m13M1ZKtbhPCPvFaUo7mq6OA7hoYsRExkC4h7BZ8feNqmTA7evuzOUgpc1qQI2GWLe
+        8/QFfE58Vr5Z8bWIFfg3BS18yTtJjMjXyRlocjmN22rLcyelUnYqnR6lpMTmX+E/h4Ad505JYd57T/HX
+        y4IF/w+YLi4VaBEFpwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="DaggerfallIcon.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAC0AAAAtCAYAAAA6GuKaAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAABl0RVh0U29mdHdhcmUAcGFpbnQubmV0IDQuMC4yMfEgaZUAABRmSURBVGhDtVkJ
+        cJxneZaD41OSde9q7/v/99JqtYdurY69dNvWYcuyLUuWLUu7K/mIEx8ZKzhO4gRiJyEHhpAQBkKICSTQ
+        QiEDpQRohiOEDlCGQqEDTDK0hbaBEJzUT5/3l2Ao0IRyfDO/pFnt/v/zve/zPu/zflv0R6/l5WsiBw9e
+        Gxk4uCnYP1/u67tO70nl7f6+Ja+ayTUo6UKLr/dwtzeV71Uz+X5fupBVs4WEksxF1d6cx909ZwwNL5WZ
+        Ro9sLBp7/E2845qVG/8lFsH6xpbXKUPHS3x9C3oB4Evn4wSU9mYK42qmMEvQR9V0fllN5d/iTefuU5Pz
+        b1dSubcp6fyt/P9Rbza/25vJJz3ZxTpuwiD3kgDw7n924GsSy8trfYmFYgHryxZ8jGaXL724iwCuJ8i7
+        lHTuUSU597Q/OfvlutTMP4WTu1+YKxx76bEPPvmLucKRl/wd4z9Qu/Z+lZu4LBvwZfL7vKmFDl/6iMsz
+        cLTKN7ZQHBlY3mRNLG+IHLx0bdHY2J+QAUbXlS2s580rfOkFF0G2E+ReNZ27WU3lPhBMznw1Ozr9r53J
+        3l/296ZQmJ/GxPYs3nLuBJ7+68exdGgPLt17Ox551z247+7zSPcNXhnaMf1CqHvy48zKSX96ccSfyrcG
+        GHlPOq8qmSVboHtRt5IBgv9/Aydg4Z3cRNLpTee3Kpn8KTW18Hg0O/Xt7eMTr8xM7URfphuZnlacvG4B
+        2e4mHM/txnCqGcsnl7BnxwA+/YkP4cYb8ji3fBxfefZTeOIDD2F838IvlNTCF5RU/hJpdNqbLswLdVZq
+        IB8X8AxWaSKxvHYVzR+wpNhYaGrmcK0/uxgjZ/cIDYKp2S9u27nn5V07tmlge9OduP7oPKL1PhxfmsXk
+        cDd2pOLoaavHDUcO4PKjD+Lrz/89zpwoYO/OQZw4eghLC/swuXM7oomB15Tu/T9mEJ73d+39rBpLPeNO
+        TN9F2k2zTpqE85LlVURvsFYjLIC9qaVGrcDSuYfjvfu+N7Nv8urY9gGMjwxiINOFtmgAt9x0HPfceRZT
+        Owfw5KOXcOGmI3jy8iP48Qvfw4cfexc+8oGHsXwij7jfCn1lMQKKFfUBN+KROtSHG6C2jV89ef0iDu4b
+        Q6q7/WWleegxhbSRQq9LHdtMRG9IkTWyu1VKxFYBv6d76/QL03vGMbK1DzsIeDjVhv5EjMATaI36caow
+        jTtO5zGSbsLS7Di+8dVncCQ3hbfdcQYXbz2FhdkJBFx6+FUHrMYqKC4Lgn4PAl4XWpqiKMztxkC6FXt3
+        9KMulvgHoYsvtVQvFCkqwuuDFg4F+0+UK725oMaxVP6hjsG9L+zdNYptQ70Y6u3BUFcc/ck25A5MYmQ4
+        g3fddzsa/Hb87d9cxuRAO87fdAwnj83h1LGDmNm9HbGQC+1xPxbn9yGbbEe4zgubxQCnzYB6/h1rCPD9
+        hzA6lMT4cBLuSOrbDNQNkmXpA0V4PdCiw5Q1f7bgJIeHKUkXSYnvSrHtGBnCUF8PoxvFQLYL2/q7MDac
+        xunrc8i0BJDbP8YIj6EpYMWJwzPIM7JvvfU0zp05phXjTirK7N4RTE9uRVMshBCj7PXYYNRXIn9oCrtG
+        e9HWGIQv3HSVBfpdUSeC7hA5XJW/37+kcYgOa7KWKZwMpOee3T2587+H+lLYNpjR6NCb6qBStKG1MYSe
+        jjiG081It4dxx9kjGOyKwlRTgt3bU7j3LaTFbSc1FbmT9NixNYW25ggCqp1Fq8LtMKHO78bc/l2YGO5B
+        Y50TrfVu+Lz8X+f+f6Oc3q+kCoP+9LxZcK1C/K3F3TiSN2xRenJBEX7u9PLoxNTPJ8a3YoCUaIkGkSXY
+        QUa5OVaHdFcToiEPVHsN9k0M4uzpAqJBO4o3rMX0SAoPXjiDQ/tGtHTP7NmOG5mRU1ST8e29zE4BD126
+        gPe9+15MjmaRiPlQ5zGizuckbWrhDLa8ymj/FXV81ps57BfNFhasIl1dmrwtbxJtJNgBdrcLkcz096cm
+        xzTAHS0N6GoKkc9daG9uQEdzWItyujMOu7GCzSSF4WwbvC4jSjeuRVw1orBvO77zrefwjvsvIOgxY5GF
+        9kk2m+sW95M2pzCYaUcHeR72WdFOWjSHGGXFDjtBm016OJtGvkvNPudn5xUV+9/RXpU30cTVbneCqfl8
+        W1fmtXhEgHaiJaxQnoJIdjYj0RphtDv4egJdbUy3YsHhhSmEFaNGDZexHB5rFaIePSaGuvDcl76Az33q
+        CTTVuzCcacOhmZ0o27wWMZ8ZnS0hdMW86O1uRBOzpq/eAqfdCLvVAJPD+0vq9welPwTYKVekTwqSVSm9
+        XuRNayCUGQJ+sn1o+ufLpw7j/NkbKENtyHQ1oj+dQMBHbWWlpzobGekY+ih7mUQE3TEF+vIN8LuoCKZy
+        JBr9/F2BiKcW+0eT+OH3v44HLp5FtsmrRTxMpWmPqtje34nuqJcb8pDnXphqK2Ez6+BxWuCwmeBsGftH
+        OsUb6SBbf12QIm9iEb2ZBT9TMaGmFx7s6Jv4ceHABNrrnXDWboFVXwI7f99524149JH70dEaQ1tTGCND
+        Ke1qqFPgsdeiOeIlXRrRElERcNdSLTJQbdXojrhx4ZbjOHV0FqnmABYP7ERYNcFn1yHis8FmqqaSuBAL
+        e0kNHWpryjTQLrsJFjX6kpJeeKcomS+5aNEoIj+EL+J1ZUeBzj3Pt0bUq07y1Gkzwsyd+xwGOKy1sOlL
+        kaJKXHrbeUqVHd3kdG+yVXuY123Brm1p7CW36xQznOYqTeaiARtSrUFM7ejF9MQAfUkjdva1c1MmSl05
+        zIYKGHRlUPl51W2lophZQ91am9/J+7lcjqtKz8FPSoMTZyl1VyRcFvPOwhsZ2nP448O93Vds+mLtBnXU
+        0XhIYcdyoLM9rslTgEohDxbA7S0xdLU3IsK0GvUV2LzhTXy/C5GAA++gq7v95huQ7mjA4qFJjA4k0Bx2
+        Q3XUsoO245blYyzQt+Lm5ROYP7AbRwqzuP/u2/D0xy7jzMlFTO8e0bgfb/DD0Tz6DakzMVGhxFKZBjrY
+        c9ihJhcmQk3dz7ldrlfDASeB+AjWDYVpl91H6/3aJtwsEtVayQKqR33QS+BRLSOSUgG9i5E2VpdiMNWC
+        QzuyuIWNJb9/B/yOGjgNW7TPnTxyUPMYQp+j85MYTDYh2RFhxwwg6LVpWfO6zWisV+Dj386G1AtUtNtF
+        RdjSq4vEY/jTR83sgIPczQPu+OBPQooJu8b6sbW/G6NbM+imQghvw3XSEMzw2ypJASNCAQ+BKxoPy0s2
+        wKwrQZDUsNSWoaZ8EyZHMrh49jpkGslVXSkUm24lE34bmuocSDRR90m3OvqR8uK12Lz+GlhrimGs2oiA
+        Qwe7mRtlm7f7Y/9FK/GAN7vYJ1QukjGHUlIjU4hME+6W0e9vTTaSqy2YnRrDSF8HYnRmEmW/6tQKJGiv
+        hsJou+wGGp9K1FQUY256DG0RBV2NAXj5QKeFhsiuh622FLryjTBVF2u0yPF9vc1+TGxN4uBoCqm4l0Vs
+        gL6qBA7WkUW/RctYxZaNWjCklpxqHX137hE1u7hNAqxptLgoGUa5myNKz4FnW+JRjPQnEFLNqHMbKE9O
+        jeMC2GqqgY+AVVa+FFJZyXoszIzjycffCZ+LVCLYemaqkZ0x0eBGW52dMudnuvkam4eXG5HPhTwmWA2V
+        0FWWoHTzOlSVb0ZF2SYUszGVbLoW5aUbUcP/GWurYHepV9gdH/Nl82NKZs6m9RahiDe56F4ZoRaecvij
+        rwpAqeggG4fTVku1sBKwTruRpWYz5tierZSqXSNZfO3Lz+D6/F4NtIER9bJYw4oBGUaxI+yBiSBLCWTd
+        2muw/tprGMVN2LR+rQawmK8bWA+yEXm9jGCrmbnKss3QVZejVlcFh8cnLf0xGZylY2ugRatFA6nT25mG
+        99j98ZdF4M2GKjR4rVDpe6W9yiXib9EV494LZ2kl5/HU5Yfxiafei664ipDXAn3FBm1TfmsFqso2Euxa
+        DeAWcl5XVUowxVrRCji5SovXM8rFGg1cDI4AN+rKUVVRgpqqChgNOnh8oStKcuH9Emlv34JVA63ZUZmw
+        04Ushfxem7/lp+LAxKSH6BmkGKToxLy7qB5W6nU3R6m5qW343Kc/gofuO4eY16QVWG3lJrRGPMh0hHHx
+        jpuQaAmjrFjSX6xdFgaiklSoriz9deZ01Yx0rRSdCeUEXU3A8pq0couJWQ41vkz1eFjmU3F8K6DZz9We
+        XKWSyXUy0rfZG9I/slv0LAS9pqvCYxsrOUSdVilFFaWMJqPd0xpC/sAO3HwqhyQjnemMauZJx3Y+NZ7B
+        h9//dvzzt76IRx68Bw7eSwrXZq6FXleJivISmAzVfJ3myMguqK+GvqaS3qOcVxk3VsoocyPsikq44z8k
+        mNqBj6jH6lojllQ7dKGIs99/U88UmuWmVr1GEwEuPlgeXsmCkehJK+5gVHcOd6EvEcatZwrsoBW49poi
+        VG9Zx2JuxyMPnMO/fOd5+ukTWoQl3VaLkakv0wBaGG271ahFWi4DNySRNtZWk8/VGiVt9T0/YqRvUZOF
+        hGfgYNUq5qIiaY9qajHgzeQOeXoOfsZorL2q3ZAgrcZqLdLCcwdlSFe1hZXOai+5lt6kBI0+kxbZjz3x
+        IFrpizetW4PaivV0e1vQ216Hsyfm8GZecbZ7E8E47ebVqcVO3aciMfoWMy0DIy6AxekJaAMvmR+dLTuf
+        pxwfU9OLkZV5cXWJgkg792WXxih977OoDa9IaoR30qIl0g6rjiksJ98qyL3NVIM1qGBTsBH4tmwLvvn8
+        Z3HuxkXSYx0c1Ge3uRz1TmaLnXAoyZmSQ6uDPHU7rdpvAwvOw9oRZbLLvMjnCcdNlDkr/bSFVyAcf01J
+        zn2UznOKyqFIB1+FvKIgYk99vfluaZmO2NAPJW3SAcWU1xKsQVehFWNvKkE12MQHGuEyU2vL1qEp7MJH
+        Lz9INXlI89SGyo2cYhxw0Kbqy9ejnpovQ4LqccCnuqj5VgIshYVZ9LIHOMSckY5mardEXqROMmEPdf47
+        PfU90g2D2YJp9cRpdVFBHMmDW2Rkp6PKscl81mA0XbWRfwLcpzj5gBrNE4iRkQF1/+5hBFULjJUb4HPq
+        8cDdt+Dx994PB6kkUmeu3kTqmNFOo9TJRtNLxakLqNqxgQBaiboFitvGv41QnPTPBG/Q1zCjVVBV2oa2
+        3V8RaojXlxMCwbmKeGXJMODtO2YV70oxv2QLdf7EYuYEweKREd+v2Gg/U1rUJOUug0R0PWy6zbSvOuzb
+        NYTczJiW4k30EbqKzVAsFWhidwz7HNqxgYN8dpLH0mHDQZW/qf+aPTBzVDPB42IvMNZyIw64Q60vKcn5
+        d/tShVE5Q5TTLsL8raOEscffJNInu1LThcOezpnPW2z2/zYbKX8SCZcZeziEBhlVk75M02wTvXBtxUa2
+        +1p0RRUk6T2kBmK0tHXMgp+bkfQ7GVXhrJiuffTV83R+o8MpNNJ6ekkZoVqETtJiNsHltMNfV3/V3T75
+        JXr843I8Vk93t3oc/Dtrza/9NUd34ZIj2v8jm9VEzpnpoRuRpT+2cwZU+BApHvEGUlBep2El/T4Xhvq6
+        kUpE4XcbNfpkk22Y3UdK0YBdV5jRRjSXTc85sppjlqLZhYaQjxkgh21WBAM+OCJ9L1Kb75OsB/sPO7T5
+        8Lep8aultXQ50k0t1Huz+f1K8tCHrL6mnwlN/IoDQ+kW2A2cNNh0RKKkwqVwGkIqL6+mqw5TFSJBJ+mx
+        gYVaoW1SBgtpOi5rDWIcErROa6YWsx/IgY1Xca8A9qvwNHS97OmefUqbVvqW6gWPnI2vQvy9Sxt0fzWZ
+        8zru7pp5xuz0XzGxQ4UYOSk61aFf8RNsEEKdeFSGAlUbDIQGNs6UJTREelLHaaAZohvcsnm91sY9Lpum
+        IGIPpCC1TNoFMCkVaXnVndj7OT73enm+4BA8b3iWp3mRxEKx9h1KJpfxpnNn3Ymprxjs6ms2GnzR31ZO
+        0vv3jml+QaKtsKD8nHTkwSJrKhVB2rYUmNBHpE0uoZm8NxoOIBYJMUtUi1odu60TjS0dr4paUHJvlpYd
+        7Jl3yLcDr3sk9ptLaKKdNlHQhVfc9XlX646vhen6ApxcEjEV5998He66/TQunj+NeXpqoYcogzQP0WEx
+        XSJhYnzkNYURDtX50BhrYKQ9Whe0mAyIsjgbW7quaPJG7yNTlDxX5kHBsQrpD1prpFpFG2UKZovfRhk8
+        72ydeM7pDf9Spul4vYr87BhOHNmPpUO70dagINHWiMG+pDbwytFZczyMhvogwqEg6nl53C7SgSMZAYsH
+        SbbFEWrOvuTpnP47BubNCgHLwYz23JUTpTegxe8srJEPSiH4k0te9v4Bpu6M0j33tK+p9z+TbVGty/X1
+        NKKLA6uTbV4KS3yKmCsxWtKcBKSZETWbKJHUYIfNQunzo62j+zV38+gPlO4DT4i0CRXlEF37iu+PA7y6
+        AO2AXXYu0w2jkZSxTL4g8jQN/2CYgKNBF8cvPWVPpvKVdm9ncZkM1HNqvAAVOXO7PQjUhRFuSV7xtY++
+        6Ona/xlm76KolBSd1JBQ4k8D/KtF4EIVcVgyOfh7863edGGGOn6Xr3ng2fpo64vhpp6fOOJDP7X4239m
+        VqOvOPyNV2ze2KvOQNMVb6TzFU8085K7aduLrvbd32RkP86M3c25NCdfCsl8KiohRbfK4T8R8G8uVrFm
+        YeUEUzwK6SJWlh58mY3gTjlPVlOHHlJ75t4nKef1pKa3PQcvq8lDD8sBvfh1TtVTK4Y+1yCH90I/6xRl
+        beWb27/AohzKA6Tda5KYzod82cU2oY23N9/ry+SGZNaUIVQ7G+Qls528TqfWI4OG1Ic4NgErfkJrz/9X
+        t/uzLT5AHiQPFGcop5nal5VMMSlkkiFZNiTtVy6ZoAWkvEcrMvYAqRMtsq/7XcrvW0VF/wPrw9ys8NFH
+        3AAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="AldermiIcon.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAC0AAAAtCAYAAAA6GuKaAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
